--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -69,10 +69,13 @@
           width: 100%;
         }
         & .item-box {
+          @include flex();
+          align-items: center;
           @include max(1100px) {
             @include flex();
           }
           & a {
+            padding-right: 8px;
             @include max(1100px) {
               width: 100%;
             }
@@ -92,10 +95,6 @@
       //   content: "\e906";
       // }
       .ic-down {
-        top: 8px;
-        right: -20px;
-        display: block;
-        position: absolute;
         @include max(1100px) {
           position: unset;
           padding: 8px 20px;
